# Projeto_Chamado_TI

./: .gitignore  pyproject.toml
api_chamados_ti/: main.py
api_chamados_ti/core/: config.py  security.py  settings.py
api_chamados_ti/crud/: atendimento.py  chamado.py  modulo.py  privilegios.py  unidade.py  user.py
api_chamados_ti/db/: database.py
api_chamados_ti/models/: anexo_atendimento.py  atendimento.py  chamado.py  modulo.py  privilegio.py  status.py  unidade.py  user.py
api_chamados_ti/routes/: atendimento.py  auth.py  chamados.py  modulo.py  privilegio.py  unidade.py  user.py
api_chamados_ti/schemas/: atendimentoRequest.py  atendimentoResponse.py  chamadoRequest.py  chamadoResponse.py  chamadosResponse.py  moduloRequest.py  moduloResponse.py  privilegioResponse.py  token.py  unidadeRequest.py  unidadeResponse.py  userCreate.py  userResponse.py  usersResponse.py
frontend/: package-lock.json
frontend/src/: App.js
frontend/src/components/: ChamadoItem.jsx  ChamadoList.jsx  ChamadosAccordion.jsx  ModalAtendimento.jsx  Navbar.jsx  ToastMessage.jsx
frontend/src/pages/: ChamadoForm.jsx  Chamados.jsx  Login.jsx  ModuloPage.jsx  Register.jsx  UnidadePage.jsx  UsuarioPage.jsx
frontend/src/services/: api.js
